--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,6 @@ services:
       - "80:8082"
     volumes:
       - ./app:/app
-    command: sh -c "python manage.py runserver 0.0.0.0:8082"
+    command: sh -c "python manage.py runsslserver 0.0.0.0:8082"
     environment:
       - DEBUG=1
